catkin_ws/logs/backend/build.make.1082.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:337:4: warning: multi-line comment [-Wcomment]
    // cv::drawMatches(frame1.getGray(),frame1.getKeypoints(),frame2.getGray(),frame2.getKeypoints(), matches, \
    ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In constructor ‘SLAM::Mapping::Mapping(SLAM::IFeatures*, SLAM::ITransformMatEst*, SLAM::IPoseGraph*, RosHandler*)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:39:52: error: no matching function for call to ‘RosHandler::RosHandler(RosHandler*&)’
  : fdem(aFDEM), tme(aTME), poseGraph(aGO), px4(aRos)//, map3d(aMap)
                                                    ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:39:52: note: candidates are:
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Mapping.h:24:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:16:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/RosHandler.h:16:2: note: RosHandler::RosHandler()
  RosHandler();
  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/RosHandler.h:16:2: note:   candidate expects 0 arguments, 1 provided
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/RosHandler.h:14:7: note: RosHandler::RosHandler(const RosHandler&)
 class RosHandler{
       ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/RosHandler.h:14:7: note:   no known conversion for argument 1 from ‘RosHandler*’ to ‘const RosHandler&’
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::run()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:65:13: error: base operand of ‘->’ has non-pointer type ‘RosHandler’
  cout << px4->getLpe()<< endl;
             ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:124:8: error: base operand of ‘->’ has non-pointer type ‘RosHandler’
     px4->updateLpeCam(); //update px4 pose if new node if camera frame
        ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In member function ‘SLAM::Mapping::GraphProcessingResult SLAM::Mapping::processGraph(const Isometry3d&, const Eigen::Matrix<double, 6, 6>&, int, double, bool, bool)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:402:16: error: base operand of ‘->’ has non-pointer type ‘RosHandler’
     cout << px4->getLpe()<< endl; //(2,3) << " is lpe height " << endl;
                ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:400:12: warning: unused variable ‘height’ [-Wunused-variable]
     double height = pos(2,3);
            ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::fusePX4LPE(int)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:845:6: error: base operand of ‘->’ has non-pointer type ‘RosHandler’
   px4->getTm(tm_lpe,im_lpe,dt_lpe);
      ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/Mapping.cpp:888:7: error: base operand of ‘->’ has non-pointer type ‘RosHandler’
    px4->updateLpeCam();
       ^
make[2]: *** [CMakeFiles/frontend.dir/src/Mapping.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
